--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .page-1 {
-    background: #fff9f9;
+    background: #e6f7f9;
     overflow: hidden;
     position: relative;
     display: flex;
