--- a/style.css
+++ b/style.css
@@ -6,25 +6,22 @@ body {
 }
 
 .page-1 {
-    background: #e6f7f9;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    min-height: 100vh; /* чтобы точно занимал весь экран */
+    height: 100vh;
 }
 
 .subtitle {
     font-family: 'Dancing Script', cursive;
-    font-size: 25px;
+    font-size: 18px; /* сделала чуть меньше */
     color: #333;
     margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
     letter-spacing: 2px;
     text-transform: uppercase;
     position: relative;
     z-index: 2;
+    text-align: center;
 }
 
 .names {
