--- a/style.css
+++ b/style.css
@@ -65,26 +65,12 @@ body {
 }
 
 /* Анимация 5 цветов внизу экрана */
-.flowers-bottom {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    z-index: 1;
-}
 
-/* Обновленные стили для анимированных цветов */
 .flowers-bottom {
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 120px;
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
     z-index: 1;
     pointer-events: none;
 }
@@ -96,38 +82,42 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     opacity: 0;
-    position: relative;
+    position: absolute;
+    bottom: 0;
     animation: flowerAppear 10s infinite ease-in-out;
     filter: drop-shadow(0 2px 4px rgba(0,0,0,0.1));
 }
 
-/* Создаем 15 цветов с разными параметрами анимации */
-.flower:nth-child(1) { animation-delay: 0s; transform: scale(0.9); }
-.flower:nth-child(2) { animation-delay: 1s; transform: scale(1.1); }
-.flower:nth-child(3) { animation-delay: 2s; transform: scale(0.8); }
-.flower:nth-child(4) { animation-delay: 3s; transform: scale(1.2); }
-.flower:nth-child(5) { animation-delay: 4s; transform: scale(1.0); }
-.flower:nth-child(6) { animation-delay: 0.5s; transform: scale(1.1); }
-.flower:nth-child(7) { animation-delay: 1.5s; transform: scale(0.7); }
-.flower:nth-child(8) { animation-delay: 2.5s; transform: scale(1.3); }
-.flower:nth-child(9) { animation-delay: 3.5s; transform: scale(0.9); }
-.flower:nth-child(10) { animation-delay: 4.5s; transform: scale(1.0); }
-.flower:nth-child(11) { animation-delay: 0.8s; transform: scale(1.2); }
-.flower:nth-child(12) { animation-delay: 1.8s; transform: scale(0.8); }
-.flower:nth-child(13) { animation-delay: 2.8s; transform: scale(1.1); }
-.flower:nth-child(14) { animation-delay: 3.8s; transform: scale(0.9); }
-.flower:nth-child(15) { animation-delay: 4.8s; transform: scale(1.0); }
+/* Позиционируем каждый цветок на случайных местах по горизонтали */
+.flower:nth-child(1) { left: 5%; animation-delay: 0s; transform: scale(0.9); }
+.flower:nth-child(2) { left: 15%; animation-delay: 1s; transform: scale(1.1); }
+.flower:nth-child(3) { left: 25%; animation-delay: 2s; transform: scale(0.8); }
+.flower:nth-child(4) { left: 35%; animation-delay: 3s; transform: scale(1.2); }
+.flower:nth-child(5) { left: 45%; animation-delay: 4s; transform: scale(1.0); }
+.flower:nth-child(6) { left: 55%; animation-delay: 0.5s; transform: scale(1.1); }
+.flower:nth-child(7) { left: 65%; animation-delay: 1.5s; transform: scale(0.7); }
+.flower:nth-child(8) { left: 75%; animation-delay: 2.5s; transform: scale(1.3); }
+.flower:nth-child(9) { left: 85%; animation-delay: 3.5s; transform: scale(0.9); }
+.flower:nth-child(10) { left: 95%; animation-delay: 4.5s; transform: scale(1.0); }
+.flower:nth-child(11) { left: 10%; animation-delay: 0.8s; transform: scale(1.2); }
+.flower:nth-child(12) { left: 30%; animation-delay: 1.8s; transform: scale(0.8); }
+.flower:nth-child(13) { left: 50%; animation-delay: 2.8s; transform: scale(1.1); }
+.flower:nth-child(14) { left: 70%; animation-delay: 3.8s; transform: scale(0.9); }
+.flower:nth-child(15) { left: 90%; animation-delay: 4.8s; transform: scale(1.0); }
 
+/* Анимация появления */
 @keyframes flowerAppear {
     0%, 100% { 
         opacity: 0; 
-        transform: translateY(30px) rotate(0deg) scale(var(--scale)); 
+        transform: translateY(30px) rotate(0deg) scale(1); 
     }
     20%, 80% { 
         opacity: 0.9; 
-        transform: translateY(0) rotate(5deg) scale(var(--scale)); 
+        transform: translateY(0) rotate(5deg) scale(1); 
     }
 }
+
+
 
 /* Основной контент */
 .main-content {
