--- a/style.css
+++ b/style.css
@@ -46,18 +46,11 @@ body {
 }
 
 .invite-button {
-    margin: 40px 0;
-    font-size: 18px;
-    padding: 15px 50px;
-    border-radius: 30px;
-    background: linear-gradient(to right, #f8a8b8, #f47c95);
-    color: white;
-    border: none;
-    box-shadow: 0 4px 15px rgba(248, 168, 184, 0.4);
-    cursor: pointer;
+       display: flex;
+    justify-content: center;
+    width: 100%;
     position: relative;
-    z-index: 2;
-    transition: transform 0.3s ease;
+    z-index: 2; /* чтобы не перекрыли цветы */
 }
 
 .invite-button:hover {
