--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .subtitle {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Dancing Script';
     font-size: 18px; /* сделала чуть меньше */
     color: #333;
     margin-top: 20px;
