--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     font-family: 'Dancing Script';
     font-size: 18px; /* сделала чуть меньше */
     color: #333;
-    margin-top: 20px;
+    margin-top: 25\px;
     margin-left: 20px;
     margin-right: 20px;
     letter-spacing: 2px;
@@ -31,7 +31,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px 0;
+    margin: 40px 0;
     line-height: 1.1;
     position: relative;
     z-index: 2;
@@ -51,7 +51,7 @@ body {
     border: none;
     padding: 15px 30px;
     border-radius: 5px;
-    margin-top: 20px;
+    margin-top: 40px;
     cursor: pointer;
     transition: background 0.3s;
 }
