--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     font-family: 'Dancing Script';
     font-size: 18px; /* сделала чуть меньше */
     color: #333;
-    margin-top: 25px;
+    margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
     letter-spacing: 2px;
@@ -108,11 +108,6 @@ body {
 .flower:nth-child(8) { left: 75%; animation-delay: 2.5s; transform: scale(1.3); }
 .flower:nth-child(9) { left: 85%; animation-delay: 3.5s; transform: scale(0.9); }
 .flower:nth-child(10) { left: 95%; animation-delay: 4.5s; transform: scale(1.0); }
-.flower:nth-child(11) { left: 10%; animation-delay: 0.8s; transform: scale(1.2); }
-.flower:nth-child(12) { left: 30%; animation-delay: 1.8s; transform: scale(0.8); }
-.flower:nth-child(13) { left: 50%; animation-delay: 2.8s; transform: scale(1.1); }
-.flower:nth-child(14) { left: 70%; animation-delay: 3.8s; transform: scale(0.9); }
-.flower:nth-child(15) { left: 90%; animation-delay: 4.8s; transform: scale(1.0); }
 
 /* Анимация появления */
 @keyframes flowerAppear {
@@ -143,8 +138,8 @@ body {
 }
 
 .heading {
-    font-family: 'Dancing Script';
-    font-size: 24px;
+    font-family: 'Dancing Script', serif;
+    font-size: 28px;
     margin-bottom: 20px;
 }
 
@@ -156,7 +151,7 @@ body {
 
 .date {
     font-family: 'Dancing Script';
-    font-size: 24px;
+    font-size: 28px;
     font-weight: bold;
     margin-bottom: 20px;
 }
