--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 .page-1 {
     min-height: 100vh; /* чтобы точно занимал весь экран */
     height: 100vh;
-    padding-top: 10vh;
+    padding-top: 5vh;
 }
 
 .subtitle {
@@ -138,7 +138,7 @@ body {
 }
 
 .heading {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Playfair Display', cursive;
     font-size: 28px;
     margin-bottom: 20px;
 }
@@ -150,7 +150,7 @@ body {
 }
 
 .date {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Playfair Display', cursive;
     font-size: 28px;
     font-weight: bold;
     margin-bottom: 20px;
