--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body {
 }
 
 .heading {
-    font-family: 'Playfair Display', cursive;
+   font-family: 'Alex Brush', cursive;
     font-size: 28px;
     margin-bottom: 20px;
 }
