--- a/style.css
+++ b/style.css
@@ -283,3 +283,49 @@ body {
     50% { transform: rotate(4deg); }
     100% { transform: rotate(-4deg); }
 }
+
+/* 5-й БЛОК */
+
+.dress-code {
+    background-color: #fff;
+    padding: 60px 20px;
+    text-align: center;
+}
+
+.dress-title {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.dress-script {
+    font-family: 'Dancing Script', cursive;
+    color: #f78ab0;
+    font-size: 42px;
+}
+
+.dress-bold {
+    font-weight: 700;
+    font-family: 'Playfair Display', serif;
+}
+
+.dress-text {
+    font-size: 16px;
+    margin-bottom: 30px;
+}
+
+.palette {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+.color {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid #ddd;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
