--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ body {
     margin: 0 auto 20px auto;
 }
 /* Цветы по бокам */
-.flower {
+.flowers {
     position: absolute;
     width: 80px;
     opacity: 0.9;
