--- a/style.css
+++ b/style.css
@@ -124,16 +124,31 @@ body {
 
 
 /* Основной контент */
-.scroll-reveal {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.9s ease-out, transform 0.9s ease-out;
+.scroll-reveal > * {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
 }
 
-.scroll-reveal.visible {
-    opacity: 1;
-    transform: translateY(0);
+.scroll-reveal.visible > * {
+  opacity: 1;
+  transform: translateY(0);
 }
+
+.scroll-reveal.visible > *:nth-child(1) {
+  transition-delay: 0s;
+}
+.scroll-reveal.visible > *:nth-child(2) {
+  transition-delay: 0.2s;
+}
+.scroll-reveal.visible > *:nth-child(3) {
+  transition-delay: 0.4s;
+}
+.scroll-reveal.visible > *:nth-child(4) {
+  transition-delay: 0.6s;
+}
+
+
 .main-content {
     scroll-behavior: smooth;
 }
