--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ body {
 }
 
 .flower {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     background-image: url('images/flowers.png');
     background-size: contain;
     background-repeat: no-repeat;
@@ -98,16 +98,16 @@ body {
 }
 
 /* Позиционируем каждый цветок на случайных местах по горизонтали */
-.flower:nth-child(1) { left: 5%; animation-delay: 0s; transform: scale(0.9); }
-.flower:nth-child(2) { left: 15%; animation-delay: 1s; transform: scale(1.1); }
-.flower:nth-child(3) { left: 25%; animation-delay: 2s; transform: scale(0.8); }
-.flower:nth-child(4) { left: 35%; animation-delay: 3s; transform: scale(1.2); }
-.flower:nth-child(5) { left: 45%; animation-delay: 4s; transform: scale(1.0); }
-.flower:nth-child(6) { left: 55%; animation-delay: 0.5s; transform: scale(1.1); }
-.flower:nth-child(7) { left: 65%; animation-delay: 1.5s; transform: scale(0.7); }
-.flower:nth-child(8) { left: 75%; animation-delay: 2.5s; transform: scale(1.3); }
-.flower:nth-child(9) { left: 85%; animation-delay: 3.5s; transform: scale(0.9); }
-.flower:nth-child(10) { left: 95%; animation-delay: 4.5s; transform: scale(1.0); }
+.flower:nth-child(1) { left: 10%; bottom: 10px; animation-delay: 0s; transform: scale(0.9); }
+.flower:nth-child(2) { left: 15%; bottom: 15px; animation-delay: 1s; transform: scale(1.1); }
+.flower:nth-child(3) { left: 25%; bottom: 25px; animation-delay: 2s; transform: scale(0.8); }
+.flower:nth-child(4) { left: 35%; bottom: 35px; animation-delay: 3s; transform: scale(1.2); }
+.flower:nth-child(5) { left: 45%; bottom: 45px; animation-delay: 4s; transform: scale(1.0); }
+.flower:nth-child(6) { left: 55%; bottom: 55px; animation-delay: 0.5s; transform: scale(1.1); }
+.flower:nth-child(7) { left: 65%; bottom: 65px; animation-delay: 1.5s; transform: scale(0.7); }
+.flower:nth-child(8) { left: 75%;  bottom: 75px; animation-delay: 2.5s; transform: scale(1.3); }
+.flower:nth-child(9) { left: 85%; bottom: 85px; animation-delay: 3.5s; transform: scale(0.9); }
+.flower:nth-child(10) { left: 95%; bottom: 95px; animation-delay: 4.5s; transform: scale(1.0); }
 
 /* Анимация появления */
 @keyframes flowerAppear {
